# deep_learning

./: .env.example  .gitignore  README.md  pyproject.toml
src/app/: loggers.py  models.py
src/app/linear_unit/: life_expectancy.ipynb  synthetic_data.ipynb  utrecht_housing.ipynb  ww2.ipynb
src/app/perceptron/: synthetic_data.ipynb
tests/: test_models.py
