[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bpython>=0.26",
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "kagglehub>=0.3.13",
    "keras>=3.13.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tensorflow>=2.20.0",
]

# [tool.pyright]
# include = ["src"]
# extraPaths = ["src"]
# executionEnvironments = [{ root = "src", extraPaths = ["src"] }]

[[tool.pyrefly.sub-config]]
matches = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyrefly]
project-includes = ["src"]
search-path = ["src"]
infer-with-first-use = false

# [tool.pytest.ini_options]
# testpaths = ["tests"]

[tool.ruff]
ignore = ["E402"]
